--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -152,10 +152,11 @@
 						  <ion-label position='floating' class='input-label'>Team</ion-label>    
 
 						  <ion-select formControlName='team' okText="Okay" cancelText="Dismiss">
-								<ion-select-option value="admin">Admin</ion-select-option>
+								<ion-select-option value="admin">Administration</ion-select-option>
+								<ion-select-option value="registration">Registration</ion-select-option>
 								<ion-select-option value="operations">Operations</ion-select-option>
 								<ion-select-option value="marketing">Marketing</ion-select-option>
-								<ion-select-option value="camps">Camps</ion-select-option>
+								<ion-select-option value="camps">Camps & Competitions</ion-select-option>
 							</ion-select>
 
 						</ion-item>
