--- a/src/app/calendar/calendar.page.scss
+++ b/src/app/calendar/calendar.page.scss
@@ -1,3 +1,5 @@
+@import '../mobile_mixin';
+
 #calendar{
 	width: 100%;
 	height: 100%;
@@ -28,6 +30,10 @@ button{
 	position: absolute;
 	bottom: 215px;
 	width: 100%;
+		
+	@include for-size(phone-only) {
+		bottom: 40px;
+	}
 }
 
 ion-checkbox{
@@ -43,20 +49,39 @@ ion-checkbox{
   right: 45px;
   bottom: 15px;
   --background: var(--ion-color-secondary);
+
+
+	@include for-size(phone-only) {
+	  right: 0px;
+	  bottom: 5px;
+	}
 }
 
 .legends-row{
 	width: 400px;
 	padding: 40px;
+
+	@include for-size(phone-only) {
+		padding: 0 0 10px 10px;
+	}
+
+
 }
 .legends-row>div{
 	margin-right: 10px;
+	@include for-size(phone-only) {
+		padding: 2px;
+		line-height: 1.2;
+		height: 20px;
+		font-size: 12px;
+	}
 }
 
 .legend-events{
 	border: solid 2px var(--green);
 	padding: 4px;
 	border-radius: 4px;
+
 }
 
 .legend-deadlines{
