--- a/src/app/file-cabinet/file-cabinet.page.html
+++ b/src/app/file-cabinet/file-cabinet.page.html
@@ -6,7 +6,7 @@
 			<label>Filter</label>
 
 			<ion-select class='filter-select' [(ngModel)]="selectedDepartment" (ionChange)='filterDownloadListByGroup()'>
-			  <ion-select-option *ngFor='let group of groups' value="{{group}}">{{group | uppercase}}</ion-select-option>
+			  <ion-select-option *ngFor='let group of groups' value="{{group.value}}">{{group.name | uppercase}}</ion-select-option>
 			</ion-select>
 		</ion-item>
 	</ion-row>
