--- a/src/app/task/task.page.html
+++ b/src/app/task/task.page.html
@@ -53,7 +53,7 @@
 					) || searchService.searchInput == "" 
 				) 
 				&& (task.status == statusFilter || statusFilter == "showall") 
-				&& (task.group == selectedDepartment || selectedDepartment == "showall")'>
+				&& (task.team == selectedDepartment || selectedDepartment == "showall")'>
 				  <ion-card-header class='task-header'>
 				    <ion-card-title class='task-name'>
 				    	{{task.name}}
