--- a/src/app/file-cabinet/file-cabinet.page.scss
+++ b/src/app/file-cabinet/file-cabinet.page.scss
@@ -29,7 +29,7 @@
 }
 
 .filter-select{
-	background: var(--blue);
+	background: var(--yellow);
 	color: var(--ion-color-light);
 	margin-left: 16px;
 	min-width: 140px;
