--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -11,7 +11,7 @@
 			</div>
 
 			<div class="login-inputs">
-				<input [(ngModel)]='email' name="email" type="text" placeholder='Username'/>
+				<input [(ngModel)]='email' name="email" type="text" placeholder='Email'/>
 				<input [(ngModel)]='password' name="password" type="password" placeholder='Password'/>
 			</div>
 
